# braiins

./: .gitignore  .gitlab-ci.yml  README.md  code-of-conduct.md
braiins-os/: .gitignore  .gitlab-ci.yml  README.md  bb.py  bos2bos.py  build-release.sh  discover.py  make-release.sh  mkimage.sh  prepare-env.sh  requirements.txt  whatsnew.md
braiins-os/builder/: __init__.py  builder.py  config.py  dodo.py  hash.py  hwid.py  nand.py  packages.py  repo.py  ssh.py
braiins-os/configs/: default.yml
braiins-os/defaults/: release.conf  release.yml
braiins-os/defaults/am1-s9/: Packages
braiins-os/docker/: Dockerfile  bashrc  build-docker-container.sh  build-release-in-docker.sh
braiins-os/upgrade/: backup.py  restore.py  stage1.sh  stage2.sh  stage3.sh.template  transfer.py  upgrade.py
braiins-os/upgrade/am1/: CONTROL  platform.py  restore.sh
braiins-os/upgrade/dm1/: CONTROL  platform.py
mining/zynq-io-dm1/design/: system_final.tcl  system_init.tcl  test_fan.tcl
open/bosminer/: .gitignore  Cargo.toml  README.md  classes.puml  work.puml
open/bosminer/.cargo/: config
open/bosminer/antminer-dev/: Cargo.toml
open/bosminer/antminer-dev/.cargo/: config
open/bosminer/bosminer/: Cargo.toml  README.md  classes.puml  components.puml  trait-hierarchy.puml
open/bosminer/bosminer-am1-s9/: Cargo.toml  README.md  ci.toml  fan-temp-control.puml  rust-toolchain
open/bosminer/bosminer-am1-s9/.cargo/: config
open/bosminer/bosminer-am1-s9/src/: async_i2c.rs  bm1387.rs  cgminer.rs  command.rs  config.rs  counters.rs  error.rs  fan.rs  fifo.rs  gpio.rs  halt.rs  hooks.rs  hw_stats.rs  i2c.rs  io.rs  lib.rs  main.rs  monitor.rs  null_work.rs  power.rs  registry.rs  sensor.rs  temp_control.rs  test.rs  utils.rs
open/bosminer/bosminer-am1-s9/src/bm1387/: i2c.rs
open/bosminer/bosminer-am1-s9/src/config/: api.rs  metadata.rs  support.rs
open/bosminer/bosminer-am1-s9/src/fan/: pid.rs
open/bosminer/bosminer-am1-s9/src/fan/pid/: offset_pid.rs
open/bosminer/bosminer-am1-s9/src/fifo/: tag.rs  uio.rs
open/bosminer/bosminer-am1-s9/src/i2c/: test_utils.rs
open/bosminer/bosminer-am1-s9/src/io/: ext_work_id.rs  tag.rs  uio.rs
open/bosminer/bosminer-am1-s9/src/power/: firmware.rs
open/bosminer/bosminer-am1-s9/src/sensor/: tmp42x.rs  tmp451.rs
open/bosminer/bosminer-am1-s9/src/test/: work_generation.rs
open/bosminer/bosminer-am1-s9/tests/: common.rs  s9_voltage_ctrl_test.rs
open/bosminer/bosminer-config/: Cargo.toml
open/bosminer/bosminer-config/src/: client.rs  error.rs  group.rs  lib.rs
open/bosminer/bosminer-erupter/: Cargo.toml  README.md  ci.toml
open/bosminer/bosminer-erupter/src/: config.rs  device.rs  error.rs  icarus.rs  lib.rs  main.rs
open/bosminer/bosminer-erupter/tests/: common.rs
open/bosminer/bosminer-macros/: Cargo.toml
open/bosminer/bosminer-macros/src/: lib.rs
open/bosminer/bosminer/scripts/: requirements.txt  runner.py
open/bosminer/bosminer/src/: api.rs  backend.rs  client.rs  config.rs  entry.rs  error.rs  hal.rs  hub.rs  job.rs  lib.rs  main.rs  node.rs  runtime_config.rs  scheduler.rs  shutdown.rs  stats.rs  sync.rs  test_utils.rs  version.rs  work.rs
open/bosminer/bosminer/src/api/: cgminer.rs
open/bosminer/bosminer/src/api/cgminer/: command.rs  response.rs  server.rs  support.rs  test.rs
open/bosminer/bosminer/src/client/: drain.rs  scheduler.rs  stratum_v2.rs  stratum_v2_channels.rs
open/bosminer/bosminer/src/client/stratum_v2/: telemetry.rs
open/bosminer/bosminer/src/error/: client.rs
open/bosminer/bosminer/src/hal/: s9.rs
open/bosminer/bosminer/src/hal/erupter/: icarus.rs
open/bosminer/bosminer/src/hal/s9/: gpio.rs  null_work.rs
open/bosminer/bosminer/src/sync/: event.rs
open/bosminer/bosminer/src/test_utils/: block_mining.rs
open/bosminer/bosminer/src/work/: engine.rs  solver.rs
open/bosminer/bosminer/tests/: block_mining.rs  target_test.rs
open/bosminer/bosminer/tests/erupter/: mod.rs
open/bosminer/bosminer/tests/s9/: mod.rs  s9_voltage_ctrl_test.rs
open/bosminer/hal/: Cargo.toml
open/bosminer/s9-io/: Cargo.toml  build.rs  fpga-io.xml
open/bosminer/scripts/: runner.py
open/bosminer/src/: btc.rs  client.rs  config.rs  error.rs  hal.rs  hub.rs  job.rs  lib.rs  main.rs  misc.rs  runtime_config.rs  stats.rs  stratum_v2.rs  test_utils.rs  utils.rs  work.rs  workdef.rs  workhub.rs
open/bosminer/src/client/: stratum_v2.rs
open/bosminer/src/hal/: erupter.rs  mod.rs  s9.rs
open/bosminer/src/hal/erupter/: config.rs  device.rs  error.rs  icarus.rs
open/bosminer/src/hal/s9/: bm1387.rs  config.rs  error.rs  fifo.rs  gpio.rs  mod.rs  null_work.rs  power.rs  registry.rs  test.rs
open/bosminer/src/hal/s9/fifo/: fifo_irq.rs  fifo_poll.rs
open/bosminer/src/hal/s9/test/: mining.rs  work_generation.rs
open/bosminer/src/work/: engine.rs  hub.rs  solver.rs
open/bosminer/src/workhub/: dummy.rs
open/bosminer/tests/: block_mining.rs  hash_test.rs  s9_test.rs  s9_voltage_ctrl_test.rs  target_test.rs
open/bosminer/tests/erupter/: mod.rs
open/bosminer/tests/s9/: mod.rs  s9_test.rs  s9_voltage_ctrl_test.rs
open/bosminer/uio/: AUTHORS  Cargo.toml
open/bosminer/uio/src/: lib.rs  linux.rs
open/docker/rust/: Dockerfile  Makefile  README.md  run4all
open/hw/zynq-io-am1-s9/: README.md
open/hw/zynq-io-am1-s9/fpga-io/: .gitignore  Cargo.toml  build.rs  ci.toml  map.svd
open/hw/zynq-io-dm1/: README.md
open/protocols/cgminer-api/: Cargo.toml
open/protocols/cgminer-api/src/: command.rs  lib.rs  response.rs  server.rs  support.rs  test.rs
open/protocols/cgminer-api/src/response/: ext.rs
open/protocols/cgminer-api/src/test/: handler.rs  utils.rs
open/scripts/: projecter
open/utils-rs/async-compat/: Cargo.toml
open/utils-rs/async-compat/src/: lib.rs
open/utils-rs/envlogger/: Cargo.toml  ci.toml
open/utils-rs/stats/: Cargo.toml
open/utils-rs/svd-build/: Cargo.toml
open/utils-rs/svd-build/src/: lib.rs
open/utils-rs/tokio-file-unix/: Cargo.toml
open/utils-rs/tokio-file-unix/src/: lib.rs
open/utils-rs/uio-async/: Cargo.toml
open/utils-rs/uio-async/src/: lib.rs  linux.rs
(+169 files in other folders)
