[package]
name = "rminer"
version = "0.1.0"
authors = ["Jan Čapek <jan@braiins.com>"]
edition = '2018'

[workspace]

members = [
    "s9-io",
    "antminer-dev",
]

[dependencies]
s9-io = { path = "s9-io", optional = true }
packed_struct="0.3"
packed_struct_codegen = "0.3"
uint = "0.5.0"
byteorder = "1.2.7"
linux-embedded-hal = { version = "0.2.0", optional = true }
sysfs_gpio = { version = "0.5.3", optional = true }
lazy_static = "1.3"
slog = { version = "~2.4", features = ["max_level_trace", "release_max_level_trace"] }
slog-envlogger = "2.1.0"
slog-term = "2.4"
slog-async = "2.3"
failure = "0.1.5"
uio = { version = "0.2", path = "uio", optional = true }
tokio = { version = "=0.1.19", features = ["async-await-preview"] }
futures-preview = { version = "0.3.0-alpha.15", features = ["compat"] }
futures-01 = { version = "0.1.27", package = "futures" }
futures-locks = "0.3.3"
bitcoin_hashes = "0.3.2"
downcast-rs = "1.0.4"
wire = { git = "ssh://git@gitlab.ii.zone/x/stratum.git", branch = "master" }
stratum = { git = "ssh://git@gitlab.ii.zone/x/stratum.git", branch = "master" }
tokio-async-await = "0.1.7"
hex = "0.3.1"
clap = "2.33.0"

[dependencies.embedded-hal]
version = "0.2.0"
# Temporary for InputPin and OutputPin traits
features = ["unproven"]

[features]
default = []
hctl_polling = []
antminer_s9 = ["s9-io", "uio", "linux-embedded-hal", "sysfs_gpio"]
erupter = []
