[package]
name = "bosminer"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
edition = '2018'

[workspace]

members = [
    "s9-io",
]

[dependencies]
s9-io = { path = "s9-io", optional = true }
packed_struct="0.3"
packed_struct_codegen = "0.3"
uint = "0.5.0"
byteorder = "1.2.7"
linux-embedded-hal = { version = "0.2.0", optional = true }
sysfs_gpio = { version = "0.5.3", optional = true }
lazy_static = "1.3"
failure = "0.1.5"
uio = { version = "0.2", path = "uio", optional = true }
tokio = { version = "=0.1.19", features = ["async-await-preview"] }
tokio-threadpool = "0.1.14"
futures-preview = { version = "0.3.0-alpha.15", features = ["compat"] }
futures-01 = { version = "0.1.27", package = "futures" }
futures-locks = "0.3.3"
downcast-rs = "1.0.4"
ii-bitcoin = { path = "../coins/bitcoin" }
ii-wire = { path = "../protocols/wire" }
ii-stratum = { path = "../protocols/stratum" }
tokio-async-await = "0.1.7"
hex = "0.3.1"
clap = "2.33.0"
libusb = { version = "0.3.0", optional = true }
ii-logging = { path = "../utils-rs/logging" }

[dependencies.embedded-hal]
version = "0.2.0"
# Temporary for InputPin and OutputPin traits
features = ["unproven"]

[features]
default = []
backend_selected = []
antminer_s9 = ["backend_selected", "s9-io", "uio", "linux-embedded-hal", "sysfs_gpio"]
erupter = ["backend_selected", "libusb"]
