[workspace]

members = [
    "bosminer",
    "bosminer-am1-s9",
    "bosminer-config",
    "bosminer-erupter",
    "bosminer-macros",
]

# failure caused a problem when they used private API from quote:
# https://users.rust-lang.org/t/failure-derive-compilation-error/39062
[patch.crates-io.failure]
path = "../utils-rs/failure"
