[package]
name = "antminer-dev"
version = "0.1.0"
authors = ["Jan Čapek <jan@braiins.com>"]
edition = '2018'

[dependencies]
rminer = { path = "../" }
linux-embedded-hal = "0.2.0"
s9-io = { path = "../s9-io" }
uint = "0.5.0"
slog = "2.4"
futures-locks = "0.3.3"
futures = "0.1.26"
tokio-async-await = "0.1.7"
tokio = { version = "0.1.19", features = ["async-await-preview"] }
tokio-file-unix = "0.5.1"
bitcoin_hashes = "0.3.2"
