[package]
name = "antminer-dev"
version = "0.1.0"
authors = ["Jan Čapek <jan@braiins.com>"]
edition = '2018'

[dependencies]
rminer = { path = "../" }
linux-embedded-hal = "0.2.0"
s9-io = { path = "../s9-io" }
uint = "0.5.0"
slog = "2.4"
tokio = { version = "=0.1.19", features = ["async-await-preview"] }
futures-preview = { version = "0.3.0-alpha.15", features = ["compat"] }
futures-01 = { version = "0.1.27", package = "futures" }
futures-locks = "0.3.3"
tokio-file-unix = "0.5.1"
bitcoin_hashes = "0.3.2"
wire = { git = "ssh://git@gitlab.bo/x/stratum.git", branch = "lva-actual-server" }
