[package]
name = "bosminer-am1-s9"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bosminer = { path = "../bosminer" }
bosminer-config = { path = "../bosminer-config" }
bosminer-macros = { path = "../bosminer-macros" }
ii-async-compat = { path = "../../utils-rs/async-compat" }
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-cgminer-api = { path = "../../protocols/cgminer-api" }
ii-fpga-io-am1-s9 = { path = "../../hw/zynq-io-am1-s9/fpga-io" }
ii-logging = { path = "../../utils-rs/logging" }
failure = "0.1.5"
lazy_static = "1.3"
packed_struct="0.3"
packed_struct_codegen = "0.3"
uio-async = { path = "../../utils-rs/uio-async" }
linux-embedded-hal = { version = "0.2.0" }
sysfs_gpio = { version = "0.5.3" }
chrono = "0.4.9"
async-trait = "0.1.13"
inventory = "0.1.4"
pid_control = "0.7.2"
approx = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
toml = "0.5"
once_cell = "1.2.0"
tempfile = "3.1"

[dependencies.embedded-hal]
version = "0.2.0"
# Temporary for InputPin and OutputPin traits
features = ["unproven"]
