[package]
name = "bosminer-erupter"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bosminer = { path = "../bosminer", features = ["erupter"] }
ii-async-compat = { path = "../../utils-rs/async-compat" }
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-logging = { path = "../../utils-rs/logging" }
failure = "0.1.5"
lazy_static = "1.3"
packed_struct="0.3"
packed_struct_codegen = "0.3"
tokio = { version = "=0.1.19", features = ["async-await-preview"] }
tokio-threadpool = "0.1.14"
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat"] }
futures-01 = { version = "0.1.27", package = "futures" }
libusb = { version = "0.3.0" }
