[package]
name = "bosminer"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = '2018'

[dependencies]
bosminer-macros = { path = "../bosminer-macros" }
ii-async-compat = { path = "../../utils-rs/async-compat" }
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-logging = { path = "../../utils-rs/logging" }
ii-stats = { path = "../../utils-rs/stats" }
ii-stratum = { path = "../../protocols/stratum" }
ii-wire = { path = "../../protocols/wire" }
async-trait = "0.1.13"
failure = "0.1.5"
once_cell = "1.2"
downcast-rs = "1.0.4"
clap = "2.33.0"
hex = "0.3.1"
serde = "1.0.103"
serde_derive = "1.0.103"
config = "0.9.3"
