[package]
name = "bosminer"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = '2018'

[dependencies]
bosminer-config = { path = "../bosminer-config" }
bosminer-macros = { path = "../bosminer-macros" }
ii-async-compat = { path = "../../utils-rs/async-compat" }
ii-bitcoin = { path = "../../coins/bitcoin" }
ii-cgminer-api = { path = "../../protocols/cgminer-api" }
ii-logging = { path = "../../utils-rs/logging" }
ii-stats = { path = "../../utils-rs/stats" }
ii-stratum = { path = "../../protocols/stratum" }
ii-wire = { path = "../../protocols/wire" }
async-trait = "0.1"
failure = "0.1.5"
once_cell = "1.2"
downcast-rs = "1.0.4"
hex = "0.3.1"
git-version = "0.3.3"
serde = "1.0"
