[package]
name = "uio"
version = "0.2.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>"]
description = "Helper library for writing linux user-space drivers with UIO."
repository = "https://github.com/gz/rust-uio"
documentation = "https://docs.rs/uio/"
readme = "README.md"
keywords = ["driver", "pci", "linux", "generic", "hardware"]
license = "MIT"
edition = '2018'

[dependencies]
fs2 = "0.4.3"
nix = "0.11.0"
libc = "0.2"
timeout-readwrite = "0.1.0"

futures = "0.1.26"
tokio-async-await = "0.1.7"
tokio = { version = "0.1.19", features = ["async-await-preview"] }
tokio-file-unix = "0.5.1"
