[package]
name = "svd-build"
version = "0.1.0"
authors = ["Braiins <braiins@braiins.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
svd2rust = "0.16"
form = "0.7.0"

# failure caused a problem when they used private API from quote:
# https://users.rust-lang.org/t/failure-derive-compilation-error/39062
[patch.crates-io.failure]
path = "../failure"
