[package]
name = "uio-async"
version = "0.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>", "Braiins <braiins@braiins.com>"]
description = "Helper library for writing asynchronous linux user-space drivers with UIO."
readme = "README.md"
keywords = ["driver", "pci", "linux", "generic", "hardware", "tokio"]
license = "MIT"
edition = "2018"

[dependencies]
fs2 = "0.4.3"
nix = "0.11.0"
libc = "0.2"
tokio = { version = "=0.1.19", features = ["async-await-preview"] }
timeout-readwrite = "0.1.0"
tokio-file-unix = "0.5.1"
futures-preview = { version = "=0.3.0-alpha.16", features = ["compat"] }
