[package]
name = "uio-async"
version = "0.1.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>", "Braiins <braiins@braiins.com>"]
description = "Helper library for writing asynchronous linux user-space drivers with UIO."
readme = "README.md"
keywords = ["driver", "pci", "linux", "generic", "hardware", "tokio"]
license = "MIT"
edition = "2018"

[dependencies]
nix = "0.14.1"
libc = "0.2"
tokio = { git = "https://github.com/tokio-rs/tokio.git" } # FIXME: waiting for release that comes after 0.2.0-alpha.6, see ii-wire for more info
timeout-readwrite = "0.2.1"
